added new paragraph

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>first page</title>
 </head>
 <body>
-    <p>Welcome to web World</p>
+    <p>Welcome to the web World</p>
 </body>
 </html>
